Add copy methods (#289)
* Add copy methods
* Change ContentResource to use generics to support copy() methods
* Fix processing of simple manifests